# plexo-sdk

./: .gitignore  Cargo.toml  mods.dot
.sqlx/: query-4f1cde8ac934cb53d2cdc73e13b6e2f7c353954ed3504170dc635a31db0663c9.json  query-56418ea73c68a6dd3d78b67511dae51b93cb9fa5667c4bf53a509d92514d71c7.json  query-586f5d7805a4a866135b0bc89541e3c7faa6c8c924f57e2ed55e4db65435df55.json  query-5a074fc1f5e10e7903426860a26f78a8599250a78853c4ba46eea1521e535937.json  query-6538f213db7b7e6b8fa5e7fcfba6e65372950dc2719ff42d0c7915e377f1010d.json  query-6bd01c5538afd8a75d8276730fb2d6d66c482bcf4d651482d19bf8c4edf1eef9.json  query-8cd21dfec1fc3f6457bea9033d1a62d7c57a24f4a119b76c40fb0fffa8fabb5d.json  query-9607deea66adfbd9458760e85e42dc571fe1c1972276d618a5054604342b5889.json  query-c86eb98cce37e3e0679c1082faedb0dfb0917ee9fe774de735454e2518870e89.json  query-ce4fad2dd9dbe99e93df5a26a419a50c1741e05cd8efec0c7a739f6047c4b0a9.json  query-dffda3c23b440701e16719893442bffe1ebacbb5afeeb5239d481cd3d45c0337.json  query-f36fada03c37c96eebcc76c54e14b0a591b7e63f07fa2b67cbd6f759ce8badd6.json  query-f94a7321314b19f5ef60c1c9651c1f7f796f4045f560fae6da3cc14cea747de0.json
migrations/: 20240109172247_bigbang.sql
src/: lib.rs  main.rs
src/assets/: asset.rs  mod.rs  operations.rs  relations.rs
src/auth/: engine.rs  jwt.rs  mod.rs  resources.rs
src/backend/: config.rs  context.rs  engine.rs  loaders.rs  mod.rs  v2.rs
src/cognition/: mod.rs  operations.rs  processor.rs  suggestions.rs
src/cognition/v2/: operations.rs  projects.rs
src/common/: commons.rs
src/errors/: sdk.rs
src/labels/: label.rs  operations.rs
src/members/: extensions.rs  member.rs  mod.rs  operations.rs  relations.rs
src/organization/: operations.rs
src/projects/: mod.rs  operations.rs  project.rs  relations.rs
src/resources/: mod.rs
src/resources/assets/: asset.rs  loader.rs  mod.rs  operations.rs  relations.rs
src/resources/changes/: change.rs  loader.rs  mod.rs  operations.rs  relations.rs
src/resources/labels/: label.rs  loader.rs  mod.rs  operations.rs  relations.rs
src/resources/members/: extensions.rs  loader.rs  member.rs  operations.rs  relations.rs
src/resources/projects/: loader.rs  mod.rs  operations.rs  project.rs  relations.rs
src/resources/tasks/: extensions.rs  loader.rs  mod.rs  operations.rs  relations.rs  task.rs  watchers.rs
src/tasks/: mod.rs  operations.rs  relations.rs  task.rs
src/teams/: mod.rs  operations.rs  relations.rs
templates/: plexo_system.md.jinja  project_suggestion.md.jinja  task_subdivide.md.jinja  task_suggestion.md.jinja
(+4 files in other folders)
