[package]
name = "plexo-sdk"
version = "0.2.13"
edition = "2021"
description = "Plexo SDK"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4.33"
uuid = { version = "1.7.0", features = ["v4"] }
thiserror = { version = "1.0.56", features = [] }
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
    "chrono",
    "time",
] }
tokio = { version = "1.35.1", features = ["full"] }
strum_macros = "0.26.1"
strum = "0.26.1"
async-trait = "0.1.77"
derive_builder = "0.13.0"
dotenv = "0.15.0"
async-graphql = { version = "7.0.1", features = [
    "decimal",
    "chrono",
    "dataloader",
    "uuid",
] }
poem-openapi = { version = "4.0.0", features = [
    "swagger-ui",
    "chrono",
    "uuid",
] }
serde = "1.0.196"
